--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -720,6 +720,67 @@ block content
                         .col.col_size_12.col_size-sm_4
                             img(class="zoom" data-zoom='https://images.wallpaperscraft.com/image/mountains_reflection_wood_canada_colors_45566_2048x1152.jpg' src="http://www.aquamater.it/wp-content/uploads/2019/02/cropped-videoblocks-plumbing-plastic-pipes-cold-and-hot-water-supply-taps-60fps_rburcjt3x_thumbnail-full01.png")
                     section
+
+                        .row
+                            .col.col_size_12.col_size-sm_3
+                                +b.stage
+                                    +e.number 
+                                        span 0
+                                        |этап
+                                    +e.header 123
+                                    +e.body
+                                        +e.title Предпроектные работы
+                                        +e.text
+                                            p  Вы получаете: 
+                                            ul.list.list_type_check
+                                                li  Договор на технологическое присоединение от АО “Ростовводоканал”и/или Технические Условия 
+                                                li Топографическая съемка,согласованная с Департаментом Архитектуры
+                                                li Баланс водопотребления и водоотведения 
+                            .col.col_size_12.col_size-sm_3
+                                +b.stage
+                                    +e.number 
+                                        span 1
+                                        |этап
+                                    +e.header 123
+                                    +e.body
+                                        +e.title Предпроектные работы
+                                        +e.text
+                                            p  Вы получаете: 
+                                            ul.list.list_type_check
+                                                li  Договор на технологическое присоединение от АО “Ростовводоканал”и/или Технические Условия 
+                                                li Топографическая съемка,согласованная с Департаментом Архитектуры
+                                                li Баланс водопотребления и водоотведения 
+                            .col.col_size_12.col_size-sm_3
+                                +b.stage
+                                    +e.number 
+                                        span 1
+                                        |этап
+                                    +e.header 123
+                                    +e.body
+                                        +e.title Предпроектные работы
+                                        +e.text
+                                            p  Вы получаете: 
+                                            ul.list.list_type_check
+                                                li  Договор на технологическое присоединение от АО “Ростовводоканал”и/или Технические Условия 
+                                                li Топографическая съемка,согласованная с Департаментом Архитектуры
+                                                li Баланс водопотребления и водоотведения
+                            .col.col_size_12.col_size-sm_3
+                                +b.stage
+                                    +e.number 
+                                        span 1
+                                        |этап
+                                    +e.header 123
+                                    +e.body
+                                        +e.title Предпроектные работы
+                                        +e.text
+                                            p  Вы получаете: 
+                                            ul.list.list_type_check
+                                                li  Договор на технологическое присоединение от АО “Ростовводоканал”и/или Технические Условия 
+                                                li Топографическая съемка,согласованная с Департаментом Архитектуры
+                                                li Баланс водопотребления и водоотведения 
+
+
+
                         +b.deadlines
                             +b.title
                                 +e.wrap 
@@ -891,50 +952,35 @@ block content
                             +e.items
                                 +e.item
                                     +e.body
-                                        +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
-                                        +e.texts
-                                            +e.text
-                                                span ЗАДАЧА
-                                                |-
-                                            +e.text
-                                                span ОСОБЕННОСТИ ПРОЕКТА
-                                                |-
-                                    +e.img
-                                        img(src="http://volga-service63.ru/img/original_1621f515481580a5.jpg")
-                                        +e.btn
-                                            +b.btn.btn_view_light
-                                                +e.text Подробнее о проекте
+                                        .row
+                                            .col.col_size_12.col_size-sm_7
+                                                +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
+                                                +e.text
+                                                    span ЗАДАЧА
+                                                    |- dsds
+                                                +e.text
+                                                    span ОСОБЕННОСТИ ПРОЕКТА
+                                                    |- dsd
+                                            .col.col_size_12.col_size-sm_5
+                                                .row
+                                                    .col.col_size_12.col_size-sm_6
+                                                        img(src="https://www.puzzle-jigsaw.net/jigsaw/grass-daisies-trees-lake-viewes.jpg")
+                                                    .col.col_size_12.col_size-sm_6
+                                                        img(src="https://proxy11.online.ua/photo/r3-bcaae20824/896974_800.jpg")
+                                                    .col.col_size_12.col_size-sm_12
+                                                        img(src="https://up.enterdesk.com/edpic_source/d0/ca/43/d0ca437f211591f00a25af5f1a718488.jpg")
+
                                 +e.item
                                     +e.body
                                         +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
-                                        +e.texts
-                                            +e.text
-                                                span ЗАДАЧА
-                                                |С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки систем массового участия. Товарищи! сложившаяся 
-                                            +e.text
-                                                span ОСОБЕННОСТИ ПРОЕКТА
-                                                |Задача организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
-                                    +e.img
-                                        img(src="https://sorokainfo.com/_nw/108/92664276.jpg")
-                                        +e.btn
-                                            +b.btn.btn_view_light
-                                                +e.text Подробнее о проекте
-                                +e.item
-                                    +e.body
-                                        +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
-                                        +e.texts
-                                            +e.text
-                                                span ЗАДАЧА
-                                                |С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки систем массового участия. Товарищи! сложившаяся 
-                                            +e.text
-                                                span ОСОБЕННОСТИ ПРОЕКТА
-                                                |Задача организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
-                                    +e.img
-                                        img(src="https://s3-eu-west-1.amazonaws.com/files.surfory.com/uploads/2017/11/19/552cc1db1f395daf548b46c6/1280x/5a110e5bbd047080068b4941.jpg")
-                                        +e.btn
-                                            +b.btn.btn_view_light
-                                                +e.text Подробнее о проекте
+                                        +e.text
+                                            span ЗАДАЧА
+                                            |- dsds
+                                        +e.text
+                                            span ОСОБЕННОСТИ ПРОЕКТА
+                                            |- dsd
                                     
+                                
 
             
                     section
@@ -1174,6 +1220,9 @@ block content
                             +e.item 
                                 img(src='images/i35.png')
                                 |Вы получаете высокий сервис оказания услуги, с применением высокотехнологичного и современного подхода
+                
+                
+                
                 .container
                     +b.stages
                         +b.title
