--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1357,7 +1357,10 @@ ul.list
 
 .reviews
     border-radius 5px
-    background-image linear-gradient( 45deg, rgba(214,227,254,.4) 0%, rgba(201,199,199,.4) 78%, rgba(213,213,213,.4) 100%)
+    background-image url(../images/reviews-bg.jpg)
+    background-position center 
+    background-size cover
+    // background-image linear-gradient( 45deg, rgba(214,227,254,.4) 0%, rgba(201,199,199,.4) 78%, rgba(213,213,213,.4) 100%)
     padding 20px 0
     position relative
     margin-bottom 30px
