--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -471,6 +471,32 @@ block content
             //- +b.btn.btn_view_pseudo
             //-     +e.text Записаться на консультацию
             
+            +b.process
+                +e.item(style="left: 500px;top: -28px;")
+                    +e.image
+                        img(src="images/i63.png")
+                        span 1
+                    +e.body
+                        +e.title Заявка
+                        +e.text Вы звоните или заполняете форму обратной связи
+
+                +e.item(style="left: 170px; top: 300px;")
+                    +e.image
+                        img(src="images/i3.png")
+                        span 1
+                    +e.body
+                        +e.title Подписание договора
+                        +e.text Вы получаете коммерческое предложение и договор на согласование. После подписания договора, вносите первый аванс
+
+                +e.item(style="left: 767px;; top: 250px;")
+                    +e.image
+                        img(src="images/i63.png")
+                        span 1
+                    +e.body
+                        +e.title Заявка
+                        +e.text Вы звоните или заполняете форму обратной связи
+
+
             .content
                 .container
                     .table
