--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3634,26 +3634,48 @@ _padding($d)
         &:before
             content ''
             position absolute
-            height 600px
-            width 600px
+            height 480px
+            width 480px
             top 0
-            left calc(50% - 300px)
-            border 2px solid #d9e2f4
+            left calc(50% - 240px)
+            border 4px solid #d9e2f4
             border-radius 100%
+            z-index 2
+
+        &__bg
+            display block !important
+            position absolute
+            height 500px
+            width 500px
+            top 0
+            left calc(50% - 250px)
+            top -10px
+            z-index 10
 
         &__item
             position absolute
             width max-content
 
+    &__bg
+        display none
     &__item
+        z-index 50
         display flex
         flex-wrap wrap
+        padding-left 20px 
+        margin-bottom 20px
+        @media (min-width 1100px)
+            &_direction
+                &_left
+                    text-align left
+                &_right
+                    flex-direction row-reverse
+                    text-align right
 
     &__image
-        width 65px
-        height 65px
+        width 90px
+        height 90px
         position relative
-        margin 0 5px 5px 0
         &:before
         &:after
             content ''
@@ -3666,9 +3688,10 @@ _padding($d)
             top 10%
             background #eee
             border-radius 100%
+            box-shadow 0 0 8px 0px #0003
         &:after
-            width 40%
-            height 40%
+            width 45%
+            height 45%
             right 10%
             bottom 10%
             background rgba(197, 197, 197, 0.2)
@@ -3689,13 +3712,10 @@ _padding($d)
             top 0
             left 0
     &__title
-        padding-top 5px
         font-size 17px
         line-height 1.3em
         color #335dae
         font-weight 600
-        grid-area title
-        display flex
         @media (min-width 600px)
             font-size 20px
     &__text
@@ -3706,4 +3726,8 @@ _padding($d)
         @media (min-width 600px)
             font-size 14px
             padding-top 0
-            max-width 400px
+
+    &__body
+        padding 4px 12px 0 8px 
+        @media (max-width 1100px)
+            width calc(100% - 90px) !important
