--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -1679,7 +1679,7 @@ block content
                             label(for="input__file").input__box
                                 .input__title Фото
                                 input(name='file' type="file" id="input__file").input__control
-                            .input__message                               
+                            .input__message(data-default='')                          
                     .modal__row
                         input(type="hidden" name="method" value="review")
                         input(type="hidden" name="modal" value="order")
