--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1223,6 +1223,12 @@ ul.list
             min-height 
     &_type
         &_file
+            &.input_ok .input__title
+                background url(../images/input-ok.svg) no-repeat center right .01em
+                background-size .75em
+            .input__title
+                width calc(100% - 2.5em)
+                transition none
             .input__control
                 // visibility hidden
                 opacity 0
