--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -65,7 +65,7 @@ block content
                             +e.description Консультация по телефону
                             +e.wrap
                                 +e.icon 
-                                +e.text 8 (863) 303-38-33
+                                +e.text.dynamic-phone 8 (863) 303-38-33
                         +b.maps
                             +e.wrap
                                 +e.icon 
