--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -14,6 +14,7 @@ block content
                         +b.logo
                             +e.image
                             +e.description Проектно-строительная<br>компания
+                            a.dynamic-phone 8 (863) 303-38-33
                     .header__center
                         +b.top-menu
                             //+e.wrapper
