--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -1647,6 +1647,25 @@ block content
             .modal__dialog
                 .close.modal__close
                 .modal__title ----
+    
+    .modal.modal_type_zoom#modal__first-vizit
+        .modal__wrapper
+            .modal__dialog.vi
+                .close.modal__close
+                .modal__title
+
+                    h2 Внимание!
+                    .container(style="text-align:left;margin-top:20px;")
+                        p(style="margin-bottom:20px;") В связи с тем, что БК Инвент относится к организациям, выполняющим неотложные работы в случаях, ставящих под угрозу жизнь или нормальные жизненные условия населения : обеспечение нормального функционирования инженерных коммуникаций и организаций, осуществляющих неотложные ремонтные работы, МЫ ПРОДОЛЖАЕМ РАБОТАТЬ В УСЛОВИЯХ САМОИЗОЛЯЦИИ ПО СПЕЦПРОПУСКАМ!
+                        
+                        p(style="margin-bottom:20px") Мы с полной ответственностью относимся к текущей ситуации в мире, соблюдаем все меры предосторожности для защиты от короновирусной инфекции. Нами разработан способ полноценного удаленного взаимодействия, что позволяет вам получить ряд услуг, не выходя из дома и не контактируя непосредственно с людьми.
+
+                        p(style="margin-bottom:20px") В период кризисной ситуации, мы идем навстречу и предлагаем АНТИКРИЗИСНЫЕ ЦЕНЫ! 
+
+                        p(style="margin-bottom:20px") Все консультации вы также можете получить в полном объеме по контактному телефону или по заявке на сайте!
+
+                        p(style="margin-bottom:20px") С искренними пожеланиями здоровья, компания БК Инвент. 
+
 
     .modal#modal__add-review
         .modal__wrapper
