--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3738,3 +3738,13 @@ _padding($d)
         padding 4px 12px 0 8px 
         @media (max-width 1099px)
             width calc(100% - 90px) !important
+
+
+.vi
+    font-weight 600
+    // background-position center !important
+    // background-size cover !important
+    // background-repeat no-repeat !important
+    //background-image url(https://sun2-3.userapi.com/r0cCtF1lZHwc2WYCwEXZ8u14tci9wNQYtNU9_A/DDhAzn4tiGQ.jpg) !important
+
+    background #abcdff !important
