--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3742,9 +3742,7 @@ _padding($d)
 
 .vi
     font-weight 600
-    // background-position center !important
-    // background-size cover !important
-    // background-repeat no-repeat !important
-    //background-image url(https://sun2-3.userapi.com/r0cCtF1lZHwc2WYCwEXZ8u14tci9wNQYtNU9_A/DDhAzn4tiGQ.jpg) !important
-
-    background #abcdff !important
+    background-color #abcdff !important
+    background-image url(http://bk-invent.ru/images/vi-bg.jpg) !important
+    background-position top center !important
+    background-size cover !important
