--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3740,30 +3740,30 @@ _padding($d)
             width calc(100% - 90px) !important
 
 
-.vi
-    font-weight 600
-    background-color #abcdff !important
-    span
-        color #032e84
+// .vi
+//     font-weight 600
+//     background-color #abcdff !important
+//     span
+//         color #032e84
    
-    @media (min-width 1300px)
-        & .modal__title
-            padding-left 230px
-        &__img
-            width 430px 
-            height 430px
-            position absolute
-            left -50px
-            //top -30px;
-            background-image url(../images/vi.png) !important
-            background-repeat no-repeat !important
-            background-size cover !important
-            background-position top left !important
-            background-size 280px !important
+//     @media (min-width 1300px)
+//         & .modal__title
+//             padding-left 230px
+//         &__img
+//             width 430px 
+//             height 430px
+//             position absolute
+//             left -50px
+//             //top -30px;
+//             background-image url(../images/vi.png) !important
+//             background-repeat no-repeat !important
+//             background-size cover !important
+//             background-position top left !important
+//             background-size 280px !important
 
-    @media (min-width 1800px)
-        & .modal__title
-            padding-left 200px
-        &__img
-            left -230px
-            background-size 430px !important
+//     @media (min-width 1800px)
+//         & .modal__title
+//             padding-left 200px
+//         &__img
+//             left -230px
+//             background-size 430px !important
