--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3767,3 +3767,66 @@ _padding($d)
 //         &__img
 //             left -230px
 //             background-size 430px !important
+
+.lp
+    position fixed
+    left 0
+    top 0
+    height 100%
+    width 100%
+    display flex
+    overflow auto
+    align-items center
+    justify-content center
+    background #4273d6
+    padding-top 60px
+    &__logo
+        position absolute
+        width 100px
+        height 100px 
+        top - 45px 
+        left calc(50% - 50px)
+        border-radius 100%
+        background #fff url('../images/logo.png') no-repeat center
+    &__title
+        text-align center 
+        margin-bottom 40px
+        font-size 20px
+        font-weight 700
+    &__content
+        position relative
+        vertical-align middle
+        z-index 100
+        margin auto
+        transform translateY(-10px)
+        width calc(100% - 22px)
+        max-width 500px
+        position relative
+        background #fff
+        border-radius 4px
+        padding 60px 30px 30px 30px
+        height auto
+        //box-shadow 0px 4px 10px 0px rgba(73, 73, 73, 0.4)
+        &
+            img
+                max-width 100%
+
+.social-icon-grup
+    //width min-content
+    margin auto
+.social-icon
+    display inline-block
+    text-decoration none !important
+    margin 0 30px 20px 0
+    width max-content
+    &__img
+        width 40px !important
+        height 40px !important
+        float left
+    &__text
+        font-size 20px !important
+        padding-left 10px 
+        line-height 40px
+        color #000
+        display inline-block
+
